--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Pakistan Landscapes — Enhanced</title>
+  <title>Pakistan Landscapes</title>
 
   <!-- Favicon & meta -->
   <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/3/32/Flag_of_Pakistan.svg" type="image/svg+xml">
@@ -197,8 +197,8 @@
     <section id="about" class="section">
       <h2>About</h2>
       <p class="lead">
-        This project was created by <strong>Ashbeel</strong> to showcase Pakistan’s breathtaking natural landscapes.
-        It features smooth animations, a stylish glassy UI, interactive 3D effects, and a cinematic welcome screen for an immersive experience.
+        This project was created by <strong>Ashbeel Zai</strong> to showcase Pakistan’s breathtaking natural landscapes.
+        If anyone want to work with me contact me through gmail!.
         <br><br>
         Developer Contact: <a href="mailto:ak9499348@gmail.com" style="color:var(--accent);">ak9499348@gmail.com</a>
       </p>
@@ -212,7 +212,6 @@
       </p>
       <div style="margin-top:20px; font-size:1.6rem;">
         <a href="https://github.com/" target="_blank" style="margin:0 10px; color:var(--accent);">🐙 GitHub</a>
-        <a href="https://www.linkedin.com/" target="_blank" style="margin:0 10px; color:var(--accent);">🔗 LinkedIn</a>
       </div>
     </section>
   </main>
