--- a/index.html
+++ b/index.html
@@ -190,7 +190,15 @@
         <div class="desc-overlay">Best time to visit: September–November — Lush valleys and autumn colors.</div>
       </div>
       <h2>Hunza Valley</h2>
-      <p class="lead">A lush valley with rivers, orchards, and incredible autumn colors.</p>
+      <p class="lead">Location: Gilgit-Baltistan, Pakistan.
+
+Altitude: 8,126 meters (26,660 feet).
+
+Significance: Nanga Parbat is the ninth-highest mountain in the world. It’s famously called the “Killer Mountain” because of its steep slopes and difficult climbing conditions.
+
+Geography: It has one of the most dramatic vertical reliefs in the world. The mountain rises sharply from the surrounding terrain, creating a huge, imposing peak.
+
+Features: Glaciers, snow-capped peaks, and rugged terrain. Popular for mountaineering, but very challenging and dangerous.</p>
     </section>
 
     <section id="skardu" class="section">
